<resources>
    <string name="app_name">Hangman</string>
    <string name="moviename">Movie Name</string>
    <string name="challenge">Challenge</string>
    <string name="showremaining">hangman</string>
    <string name="enterletter">Enter your Letter</string>
    <string name="player2">PLAYER 2</string>
    <string name="playhangman">PLAYER 1</string>
    <string name="Player2">PLAYER 2</string>
    <string name="check">CHECK</string>
    <string name="movieletters">movieletters</string>
</resources>
